src/app/components/sidebar/style.scss
.sidebar {

    height: 100%;
    min-height: 100%;
    width: 199px;
    min-width: 199px;
    max-width: 199px;
    border-right: 1px solid #B8B8B9;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    cursor: default;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #fff;

    .sidebar-section {

        height: 40px;
        min-height: 40px;
        max-height: 40px;
        width: 199px;
        min-width: 199px;
        max-width: 199px;
        overflow: hidden;
        padding: 4px;
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;

        &.active {
            background-color: #0B54D3;
            color: #fff;
        }

        .section-icon {
            margin-right: 4px;
            width: 30px;
            max-width: 30px;
            min-width: 30px;
        }

        .section-label {

            font-size: 12px;

        }

    }

}

